# relo-calculator

./: .dockerignore  Dockerfile  README.md  SECURITY_TEST.md  pyproject.toml  run.sh
.github/: PULL_REQUEST_TEMPLATE.md  hf-space-header.md
.github/workflows/: keepalive.yml  sync-hf.yml
app/: currencies.py  data_sources.py  fx.py  main.py  model.py  tax.py
app/data/: capital_city.json  currency_by_country.json  numbeo_cache.json  numbeo_index.json  tax_rates.json
app/static/: style.css
app/templates/: home.html  index.html  tax.html
docs/: ARCHITECTURE.md  DEPLOYMENT.md  SECURITY_TEST.md  TESTING.md
scripts/: build_cache.py
tests/: conftest.py  test_app.py  test_currencies.py  test_data_sources.py  test_fx.py  test_integration.py  test_model.py  test_regression.py  test_security.py  test_tax.py
